openshift/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: digital-twin-backend
  labels:
    app: digital-twin-backend
spec:
  to:
    kind: Service
    name: digital-twin-backend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
